Datenbank komplett gelöscht. Stelle jetzt um auf in Memory. Services sollen nur über Kafka kommunizieren. Tests laufen für shipement, scan, deliveryservice. Test noch zu machen für notification und analyticservice. Versuche dann nochmal mvn clean install -U auszuführen